# SPACE

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
example_data/: MERFISH_sim.h5ad
scripts/: Roe_NSCLC.ipynb  SES_slice153.ipynb  SUS_NSCLC_score.ipynb
scripts/CCI/: 0_NSCLC_CCI_data.ipynb  1_cellchat_object_NSCLC.ipynb
space/: __init__.py  function.py  layer.py  loss.py  model.py  train.py  utils.py
