[build-system]
requires = ["setuptools>=42.0","wheel","build","packaging","tomli"]
build-backend = "setuptools.build_meta"

[project]
name = "space-srt"
version = "0.6.0"
authors = [
  { name="Yuzhe Li", email="liyuzhezju@gmail.com" },
]
description = "SPatial transcriptomics Analysis via Cell Embedding"
readme = "README.md"
requires-python = ">3.6.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
]
dependencies = [
    "build",
    "packaging",
    "pyparsing",
    "tomli",
    "numpy>=1.17.2",
    "pandas>=0.25.1",
    "scipy>=1.3.1",
    "scikit-learn>=0.22.1",
    "scanpy>=1.4.5",
    "tqdm>=4.28.1",
    "matplotlib>=3.0.3",
    "seaborn>=0.9.0",
    "leidenalg>=0.8.3",
    "squidpy>=1.1.0",
    "networkx>=2.5"
]

[project.urls]
"Homepage" = "https://github.com/ericli0419/SPACE"
"Bug Tracker" = "https://github.com/ericli0419/SPACE/issues"